--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
      <ul>
       <li>git status: checks what branch we are currently on</li>
       <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+      <li>git push origin (branch name) pushes changes to main</li>
      </ul>
 
       </section>
@@ -50,6 +51,10 @@
      <ul>
       <li>A variable is a named container that allows us to store data in our code.</li>
       <li>Control flow is the order in which a computer executes code in a script.</li>
+      <li>Example of a for loop 
+        var shapes = ["triangle", "square", "pentagon", "circle"];
+        for(var x = 0; x < shapes.length; x++) {
+         console.log(shapes[x])</li>
      </ul>
 
       </section> 
